--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,14 @@
   display: grid;
   grid-template-columns: repeat(12, 1fr);
 }
+header > img{
+  grid-column: 2/ span 2;
+}
+
+header > nav {
+  grid-column: 5/ span 6 ;
+  border: 1px;
+}
+ul.header{
+  display: flex;
+}
